<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                style="@style/holeStyle"
                android:contentDescription="@string/hole_img_view_desc" />

            <ImageView
                style="@style/holeStyle"
                android:contentDescription="@string/hole_img_view_desc" />

            <ImageView
                style="@style/holeStyle"
                android:contentDescription="@string/hole_img_view_desc" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                style="@style/holeStyle"
                android:contentDescription="@string/hole_img_view_desc" />

            <ImageView
                style="@style/holeStyle"
                android:contentDescription="@string/hole_img_view_desc" />

            <ImageView
                style="@style/holeStyle"
                android:contentDescription="@string/hole_img_view_desc" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                style="@style/holeStyle"
                android:contentDescription="@string/hole_img_view_desc" />

            <ImageView
                style="@style/holeStyle"
                android:contentDescription="@string/hole_img_view_desc" />

            <ImageView
                style="@style/holeStyle"
                android:contentDescription="@string/hole_img_view_desc" />
        </TableRow>

    </TableLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/mole0_0"
                style="@style/moleStyle" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/mole0_1"
                style="@style/moleStyle" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/mole0_2"
                style="@style/moleStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/mole1_0"
                style="@style/moleStyle" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/mole1_1"
                style="@style/moleStyle" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/mole1_2"
                style="@style/moleStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/mole2_0"
                style="@style/moleStyle" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/mole2_1"
                style="@style/moleStyle" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/mole2_2"
                style="@style/moleStyle" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_start_text"
        app:layout_constraintEnd_toEndOf="@+id/table"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_start_text"
        android:textSize="@dimen/size_36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>